# shape-to-solid

./: .gitignore  pyproject.toml
agent_docs/: architect.yaml  developer.yaml
agent_work/: architect.md
blueprints/: resources.md  rules.md  task.md
src/shape_to_solid/: connection_test.py  main.py
